Starting point 2.0 - no logic -

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-
-  <app-header></app-header>
+  <div class="t">
+    <app-header></app-header>
+  </div>
 
   <mat-sidenav-container class="sidenav-container">
 
@@ -15,9 +16,9 @@
         <!-- Insert your main content here-->
         <app-home></app-home>
       </div>
-      
-    </mat-sidenav-content>
-    
+
+        <app-footer></app-footer>
+
+    </mat-sidenav-content>    
   </mat-sidenav-container>
-  <app-footer></app-footer>
 </div>
