--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -38,6 +38,6 @@
 
 
 
-    <button mat-raised-button color="primary" type="submit">Apply Filters</button>
+    <button mat-raised-button color="accent" type="submit">Apply Filters</button>
 
 </form>
