--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
         <input matInput type="password" placeholder="Password">
     </mat-form-field>
 
-    <button mat-raised-button color="accent">Confirm</button>
+    <button mat-raised-button color="accent">Login</button>
 
 </div>
 
