--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,2 +1,5 @@
-<h1>Browse our products...</h1>
+<div class="top-content">
+    <h1 class="top-content-title">Browse our products...</h1>
+    <app-search-bar></app-search-bar>  
+</div>
 <app-filter></app-filter>
