--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,9 +1,11 @@
+@import '../../../styles.scss';
+
 .footer-container {
-    background-color: #2a2a2a;
-    padding: 1rem 2rem;
+    background-color: $tertiaryDark;
     color: #cfcfcf;
-    margin-left: 250px;
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     .help-section{
     position: absolute;
     left: 1%;
@@ -11,7 +13,7 @@
     }
 
 .inner{
-    background-color: #2a2a2a;
+    background-color: transparent;
 }
     a {
         color: inherit;
