--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,9 @@
 <mat-sidenav-container class="sidebar-container">
 
   <mat-sidenav mode="side" opened="true">
-      <div class="logo"><img src="../../../assets/NgMarketPlace.png" alt=""></div>
+    <div class="logo">
+      <img src="../../../assets/NgMarketPlace.png" alt="">
+    </div>
   
       <!-- Favourites -->
       <div class="sidebar-section">
