--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,20 +1,23 @@
+@import '../../../styles.scss';
+
 mat-sidenav-container{
 height: 100%;
     mat-sidenav {
         width: 250px;
-        box-shadow: 3px 0px 7px rgba(0, 0, 0, 0.1);
-        background-color: #f7f7f7;
+        box-shadow: 3px 0px 7px $primaryColor;
+        background-color: $tertiaryLight;
         padding: 1rem 0;
         padding-right: 1rem;
         font-family: 'Fira Sans', sans-serif;
         padding-left: 1rem;
         .logo{
             img{
-                width: 90%;
+                width: 70%;
             }
         }
         .sidebar-section{
             margin-bottom: 15%;
+            padding-right: 10%;
         }
         h3, h4, h5 {
             margin: 0.5rem 0;
