--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 
   <mat-sidenav mode="side" opened="true">
     <div class="logo">
-      <img src="../../../assets/NgMarketPlace.png" alt="">
+      <img src="../../../assets/images/NgMarketPlace.png" alt="">
     </div>
   
       <!-- Favourites -->
