--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,21 +1,23 @@
 <footer class="footer-container">
 
-    <div class="inner" style="margin-left: 250px;">
+    <div class="inner">
         <div class="social-links">
-            <a href="#" mat-icon-button><mat-icon>facebook</mat-icon></a>
-            <a href="#" mat-icon-button><mat-icon>twitter</mat-icon></a>
-            <a href="#" mat-icon-button><mat-icon>linkedin</mat-icon></a>
-            <a href="#" mat-icon-button><mat-icon>instagram</mat-icon></a>
+            <a href="#"><img src="../../../assets/images/iconmonstr-facebook-3.svg" alt=""></a>
+            <a href="#"><img src="../../../assets/images/iconmonstr-instagram-11.svg" alt=""></a>
+            <a href="#"><img src="../../../assets/images/iconmonstr-linkedin-3.svg" alt=""></a>
+            <a href="#"><img src="../../../assets/images/iconmonstr-twitter-3.svg" alt=""></a>
         </div>
-        <div class="contact-info">
-            <mat-icon>email</mat-icon> contact@example.com
-            <mat-icon>phone</mat-icon> +1 (123) 456-7890
-        </div>
-        <div class="address">
-            123 Main St., City, Country, 45678
-        </div>
-        <div class="lcc">
-            LCC Number: ABC-12345
+        <div class="info">
+            <div class="contact-info">
+                <mat-icon>email</mat-icon> contact@example.com
+                <mat-icon>phone</mat-icon> +1 (123) 456-7890
+            </div>
+            <div class="address">
+                123 Main St., City, Country, 45678
+            </div> 
+            <div class="lcc">
+                LCC Number: ABC-12345
+            </div>
         </div>
         <div class="help-section">
             <button mat-button>FAQ</button>
